space station project

--- a/Website Project/css/shared.css
+++ b/Website Project/css/shared.css
@@ -32,7 +32,7 @@ h1 {
     text-transform: uppercase;
     text-align: center;
     color: #E91c1c;
-    text-shadow: 2px 2px 3px rgba (0,0,0,0.5);
+    text-shadow: 2px 2px 3px rgba(0,0,0,0.5);
 }
 
 h1::after { 
@@ -42,7 +42,7 @@ h1::after {
     width: 150px;
     background: #E91c1c;
     margin: 5px auto 40px;
-    box-shadow: 5px 2px 3px rgba (0,0,0,0.5);
+    box-shadow: 5px 2px 3px rgba(0,0,0,0.5);
 }
 
 h2 { 
@@ -107,9 +107,9 @@ section {
     margin-left: -15px;
 }
 
-.clearfix:after,
-.container:after,
-.navbar:after {
+.clearfix::after,
+.container::after,
+.navbar::after {
     clear: both;
     display: table;
     content: "";
@@ -195,7 +195,7 @@ Contact Style
     padding: 10px;
     border-radius: 8px;
     margin: 0px auto;
-    background-color: rgba (100,65,0,.3);
+    background-color: rgba(100,65,0,.3);
     box-shadow: 2px 2px 10px 0 rgba(0,0,0,0.5);
 }
 
@@ -247,7 +247,7 @@ Contact Style
     font-weight: 600;
     color: #8D838F;
     padding: 12px 12px;
-    width: 70px;
+    width: 700px;
     border: 1px solid #808080;
     margin: 2% auto;
     border-radius: 7px;
@@ -276,10 +276,10 @@ Contact Style
 }
 
 .reservation input[type="text"]:hover {
-    box-shadow: 0 0 18px rgba (100,65,0,0.8)
+    box-shadow: 0 0 18px rgba(100,65,0,0.8)
 }
 
-.form-space {
+.form-spacer {
     padding: 30px 39px;
 }
 
