--- a/Website Project/css/animations.css
+++ b/Website Project/css/animations.css
@@ -9,7 +9,7 @@
     text-decoration: none;
 }
 
-menu li {
+.menu li {
     color: #000;
     background-color: rgba(255,255,255,1);
     display: inline-block;
