--- a/My own website/CSS/style1.css
+++ b/My own website/CSS/style1.css
@@ -195,6 +195,37 @@ section {
 	margin: 4px;
 }
 
+.formcontainer {
+    border: 2px solid black;
+    margin: auto;
+    padding: 25px 0;
+    width: 400px;
+}
+
+.form {
+    display:table;
+    line-height:10px;
+	margin: auto;  
+}
+
+.table {
+	display: table-row;
+}
+
+.cell {
+	display: table-cell;
+	text-align: left;
+}
+
+form input[type="text"] {
+    display:inline-block;
+    margin:0 auto;
+    width:200px;
+	height:20px;
+	border-radius:3px;
+	border: 2px black solid;
+	background-color: lightblue;
+}
 
 
 section h2 {
@@ -226,47 +257,168 @@ div #portfolio {
 	grid-template-columns: 1fr;
 	grid-template-rows: auto auto;
 	color: white;
-	text-align: center;
 	font-size: 30px;
 	padding: 0;
 	object-fit: contain;
 }
 
 .photosvideos {
-	height: auto;
+	height: 100%;
 	border: solid black 2px;
 	object-position: center;
 	text-align: center;
-	object-fit: contain;
-	align-items: center;
-	justify-items: center;
+}
+
+.photosvideosv {
+	height: 100%;
+	border: solid black 2px;
+	object-position: center;
+	text-align: center;
 }
 
 .photos {
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-	grid-template-rows: 1fr 1fr;
-	gap:2px;
+	display: inline;
 	align-items: center;
 	justify-items: center;
 	width: 70%;
-	margin-left: 15%;
-	padding-top: 5px;
-	padding-bottom: 5px;
+	margin:auto;	
 }
 
-.photoitem {
+.row > .column {
+	padding: 0 8px;
+  }
+
+  .row:after {
+	content: "";
+	display: table;
+	clear: both;
+  }
+
+/* Create four equal columns that floats next to eachother */
+.column {
+	float: left;
+	width: 25%;
+  }
+
+  /* The Modal (background) */
+.modal {
+	display: none;
+	position: fixed;
+	z-index: 1;
+	padding-top: 100px;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	overflow: auto;
+	background-color: black;
+  }
+  
+  /* Modal Content */
+  .modal-content {
+	position: relative;
+	background-color: #fefefe;
+	margin: auto;
 	padding: 0;
-	border: solid black 2px;
-}
+	width: 90%;
+	max-width: 1200px;
+  }
+  
+  /* The Close Button */
+  .close {
+	color: white;
+	position: absolute;
+	top: 10px;
+	right: 25px;
+	font-size: 35px;
+	font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+	color: #999;
+	text-decoration: none;
+	cursor: pointer;
+  }
+  
+  /* Hide the slides by default */
+  .mySlides {
+	display: none;
+	margin-bottom: -8px;
+  }
+  
+  /* Next & previous buttons */
+  .prev,
+  .next {
+	cursor: pointer;
+	position: absolute;
+	top: 50%;
+	width: auto;
+	padding: 16px;
+	margin-top: -50px;
+	color: white;
+	font-weight: bold;
+	font-size: 20px;
+	transition: 0.6s ease;
+	border-radius: 0 3px 3px 0;
+	user-select: none;
+	-webkit-user-select: none;
+  }
+  
+  /* Position the "next button" to the right */
+  .next {
+	right: 0;
+	border-radius: 3px 0 0 3px;
+  }
+  
+  /* On hover, add a black background color with a little bit see-through */
+  .prev:hover,
+  .next:hover {
+	background-color: rgba(0, 0, 0, 0.8);
+  }
+  
+  /* Number text (1/3 etc) */
+  .numbertext {
+	color: #f2f2f2;
+	font-size: 25px;
+	padding: 8px 12px;
+	position: absolute;
+	top: 0;
+  }
+  
+  /* Caption text */
+  .caption-container {
+	text-align: center;
+	background-color: black;
+	padding: 2px 16px;
+	color: white;
+  }
+  
+  img.demo {
+	opacity: 0.6;
+  }
+  
+  .active,
+  .demo:hover {
+	opacity: 1;
+  }
+  
+  img.hover-shadow {
+	transition: 0.3s;
+  }
+  
+  .hover-shadow:hover {
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  }
 
 .video {
 	padding-top: 10px;
+	text-align: center;
 }
 
 img {
-	width: 404px;
-	height: 311px;
+	width: 95%;
+	height: 100%;
 	object-fit: contain;
 }
 
@@ -297,16 +449,7 @@ div #contact label {
 }
 
 
-input[type="text"] {
-    width:200px;
-	height:20px;
-	border-radius:3px;
-	border: 2px black solid;
-	background-color: lightblue;
-	margin-left:2px;
-	position:relative;
-	
-}
+
 
 footer {
 	text-align: center;
